<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/ic_baseline_forum"
        android:title="@string/title_forum" />

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_baseline_shopping"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_consultation"
        android:icon="@drawable/ic_baseline_consult"
        android:title="@string/title_consulation" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />

</menu>