<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgot_password_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/action_bar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.alpas.utilsAlpas.AlpasTextViewBold
            android:id="@+id/tv_title_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_forgot_pass"
            android:layout_gravity="center"
            android:textColor="@color/background_white"
            android:textSize="@dimen/title_textSize" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_forgot_password_logo"
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="@dimen/login_logo_height"
        android:contentDescription="@string/app_name"
        android:src="@drawable/alpas_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_forgot_password_activity" />

    <com.example.alpas.utilsAlpas.AlpasTextView
        android:id="@+id/tv_details_forgot_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/details_forgot_pass"
        android:textColor="@color/black"
        android:textSize="@dimen/forgot_password_description_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_forgot_password_logo"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_forgot_pass_email"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/et_hint_email_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_details_forgot_pass">

        <com.example.alpas.utilsAlpas.AlpasEditTextRegular
            android:id="@+id/et_forgot_pass_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="@dimen/et_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/et_textSize"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.example.alpas.utilsAlpas.AlpasButton
        android:id="@+id/btn_submit_email_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background_main"
        android:foreground="?attr/selectableItemBackground"
        android:foregroundGravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_lbl_submit"
        android:textColor="@color/black"
        android:textSize="@dimen/btn_textSize"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_forgot_pass_email"
        />


</androidx.constraintlayout.widget.ConstraintLayout>